Fix spacing on sleep charts

--- a/src/styles.css
+++ b/src/styles.css
@@ -156,13 +156,14 @@ main {
 .daily-sleep {
   display: flex;
   height: 50%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   width: 90%;
 }
 
 .hours-slept,
 .sleep-quality {
   width: 50%;
+  margin: 10px;
 }
 
 .weekly-sleep {
@@ -170,6 +171,7 @@ main {
   flex-direction: column;
   align-items: center;
   width: 90%;
+
 }
 
 /* ACTIVITY */
